--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 <body>
 
-    <div class="formconteiner">
-        <div class="conteiner">
+    <main class="formconteiner">
+
             <img src="./image/image-qr-code.png" alt="QR code">
 
             <h1>Improve your front-end skills by building projects</h1>
 
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
 
-        </div>
+ 
         </p>
-    </div>
+    </main>
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
