--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/LeonardoSchuquel" target="_blank">Leonardo Schuquel</a>.
+        Coded by <a href="https://leonardoschuquel.github.io/Portfolio/" target="_blank">Leonardo Schuquel</a>.
     </div>
 
 </body>
